k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oraiscan-frontend
  labels:
    app: oraiscan-frontend
spec:
  selector:
    matchLabels:
      app: oraiscan-frontend
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: oraiscan-frontend
    spec:
      containers:
      - name: oraiscan-frontend
        image: thao1996/oraiscan-frontend:9caea1faea6437521e6162c8ca6b06fd1c4106f3
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
