k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oraiscan-frontend
spec:
    type: NodePort
    selector:
        app: oraiscan-frontend
    ports:
        - port: 5000
          targetPort: 5000
          protocol: TCP
