k8s/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oraiscan-frontend
spec:
  rules:
  - host: scan.orai.io
    http:
      paths:
      - path: /
        backend:
          serviceName: oraiscan-frontend
          servicePort: 5000
